# gecko-cmake

./: CMakeLists.txt  readme.md
cmake/: kevinBuild.cmake
examples/: CMakeLists.txt  test.cpp
include/kevin/: version.h.in
src/: kevin.cpp
standalone/: CMakeLists.txt
